--- a/src/app/Task/add-task/add-task.component.html
+++ b/src/app/Task/add-task/add-task.component.html
@@ -1,42 +1,47 @@
 <div class="container">
-  <div class="form-horizandal">
+  <form class="form-horizontal" role="form">
+    <h2>Add Task</h2>
+    <hr>
     <div class="form-group">
-      <label class="control-label col-lg-2">Task</label>
-      <div class="col-lg-3">
-        <input type="text" class="form-control" />
+      <label for="task" class="col-sm-3 control-label">Task</label>
+      <div class="col-sm-9">
+        <input type="text" id="task" placeholder="Task" class="form-control" autofocus>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-lg-2">Priority</label>
-      <div class="col-lg-3">
-        <input type="range" class="form-control" />
+      <label for="Priority" class="col-sm-3 control-label">Priority</label>
+      <div class="col-sm-9">
+        <input type="range" id="priority" class="form-control" autofocus>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-lg-2">Parent Task</label>
-      <div class="col-lg-3">
+      <label for="email" class="col-sm-3 control-label">Parent Task </label>
+      <div class="col-sm-9">
         <select class="form-control">
       <option>Select</option>
     </select>
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-lg-2">Start Date</label>
-      <div class="col-lg-3">
-        <input type="date" class="form-control" />
+      <label for="startdate" class="col-sm-3 control-label">Start Date</label>
+      <div class="col-sm-9">
+        <input type="date" id="startdate" class="form-control">
       </div>
     </div>
     <div class="form-group">
-      <label class="control-label col-lg-2">End Date</label>
-      <div class="col-lg-3">
-        <input type="date" class="form-control" />
+      <label for="enddate" class="col-sm-3 control-label">End Date</label>
+      <div class="col-sm-9">
+         <input type="date" id="enddate" class="form-control">
       </div>
     </div>
+   <!-- /.form-group -->
     <div class="form-group">
-      <div class="col-md-offset-2">
-        <input type="submit" value="Add Task" class="btn btn-primary">
-        <input type="reset" value="Reset" class="btn btn-primary">
+      <div class="col-sm-9 col-sm-offset-3">
+       <button type="submit" class="btn btn-primary">Add Task</button>
       </div>
     </div>
-  </div>
+    
+  </form>
+  <!-- /form -->
 </div>
+<!-- ./container -->
