--- a/src/app/Task/update-task/update-task.component.html
+++ b/src/app/Task/update-task/update-task.component.html
@@ -1,3 +1,48 @@
-<p>
-  update-task works!
-</p>
+<div class="container">
+  <form class="form-horizontal" role="form">
+    <h2>Update Task</h2>
+    <hr>
+    <div class="form-group">
+      <label for="task" class="col-sm-3 control-label">Task</label>
+      <div class="col-sm-9">
+        <input type="text" id="task" placeholder="Task" class="form-control" autofocus>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="Priority" class="col-sm-3 control-label">Priority</label>
+      <div class="col-sm-9">
+        <input type="range" id="priority" class="form-control" autofocus>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="email" class="col-sm-3 control-label">Parent Task </label>
+      <div class="col-sm-9">
+        <select class="form-control">
+      <option>Select</option>
+    </select>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="startdate" class="col-sm-3 control-label">Start Date</label>
+      <div class="col-sm-9">
+        <input type="date" id="startdate" class="form-control">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="enddate" class="col-sm-3 control-label">End Date</label>
+      <div class="col-sm-9">
+         <input type="date" id="enddate" class="form-control">
+      </div>
+    </div>
+   <!-- /.form-group -->
+    <div class="form-group">
+      <div class="col-sm-9 col-sm-offset-3">
+       <button type="submit" class="btn btn-primary">Update Task</button>
+       <button type="reset" id="reset" class="btn btn-primary">Reset</button>
+      </div>
+    </div>
+    
+  </form>
+  <!-- /form -->
+</div>
+<!-- ./container -->
