--- a/src/app/Task/view-task/view-task.component.html
+++ b/src/app/Task/view-task/view-task.component.html
@@ -1,3 +1,52 @@
-<p>
-  view-task works!
-</p>
+<!-- <div class="container">
+  <form class="form-inline">
+  <div class="form-group col-sm-12">
+    <label for="task" class="mr-sm-2 col-sm-3">Task</label>
+    <input type="text" class="form-control mb-2 col-sm-3" id="task" value="email@example.com">
+    <label for="parenttask" class="mr-sm-2 col-sm-3">Parent Task</label>
+    <input type="text" class="form-control mb-2 mr-sm-2 col-sm-3" id="parenttask" value="email@example.com">
+  </div>
+  
+  
+  
+</form>
+</div> -->
+
+<form class="form-horizontal" role="form">
+    <div class="container">
+        <div class="row">
+            <div class="form-group form-group-sm col-sm-6">
+                <div class="row">
+                    <label for="first_name" class="mb-2">Task</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="first_name" name="first_name">
+                    </div>
+                </div>
+            </div>
+            <div class="form-group form-group-sm col-sm-6">
+                <div class="row">
+                    <label for="last_name" class="sm-2">Priority Task</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" id="last_name" name="last_name">
+                    </div>
+                </div>
+            </div>
+            <div class="form-group form-group-sm col-sm-6">
+                <div class="row">
+                    <label for="Street" class="col-sm-3 col-form-label">Street</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" id="Street" name="Street">
+                    </div>
+                </div>
+            </div>
+            <div class="form-group form-group-sm col-sm-6">
+                <div class="row">
+                    <label for="City" class="col-sm-3 col-form-label">City</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" id="City" name="City">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
