html changes in viewtask

--- a/src/app/Task/view-task/view-task.component.html
+++ b/src/app/Task/view-task/view-task.component.html
@@ -11,42 +11,38 @@
   
 </form>
 </div> -->
-
-<form class="form-horizontal" role="form">
-    <div class="container">
-        <div class="row">
-            <div class="form-group form-group-sm col-sm-6">
-                <div class="row">
-                    <label for="first_name" class="mb-2">Task</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="first_name" name="first_name">
-                    </div>
-                </div>
-            </div>
-            <div class="form-group form-group-sm col-sm-6">
-                <div class="row">
-                    <label for="last_name" class="sm-2">Priority Task</label>
-                    <div class="col-sm-9">
-                        <input type="text" class="form-control" id="last_name" name="last_name">
-                    </div>
-                </div>
-            </div>
-            <div class="form-group form-group-sm col-sm-6">
-                <div class="row">
-                    <label for="Street" class="col-sm-3 col-form-label">Street</label>
-                    <div class="col-sm-9">
-                        <input type="text" class="form-control" id="Street" name="Street">
-                    </div>
-                </div>
-            </div>
-            <div class="form-group form-group-sm col-sm-6">
-                <div class="row">
-                    <label for="City" class="col-sm-3 col-form-label">City</label>
-                    <div class="col-sm-9">
-                        <input type="text" class="form-control" id="City" name="City">
-                    </div>
-                </div>
-            </div>
-        </div>
+<div class="container">
+<form>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="task">Task</label>
+        <input type="text" class="form-control" id="task" >
+      </div>
+      <div class="form-group col-md-6">
+        <label for="parenttask">Parent Task</label>
+        <input type="text" class="form-control" id="parenttask" >
+      </div>
     </div>
-</form>
+    <div class="form-row">
+    <div class="form-group  col-md-3">
+      <label for="priorityfrom">Priority From</label>
+      <input type="number" class="form-control" id="priorityfrom">
+    </div>
+    <div class="form-group  col-md-3">
+      <label for="priorityto">Priority To</label>
+      <input type="number" class="form-control" id="priorityto" >
+    </div>
+      <div class="form-group  col-md-3">
+        <label for="startdate">Start Date</label>
+        <input type="date" class="form-control" id="startdate">
+      </div>
+      <div class="form-group  col-md-3">
+        <label for="enddate">End Date</label>
+        <input type="date" class="form-control" id="enddate">
+      </div>
+    </div>
+  <hr>
+  
+    
+  </form>
+</div>
