--- a/src/app/Task/add-task/add-task.component.html
+++ b/src/app/Task/add-task/add-task.component.html
@@ -5,19 +5,19 @@
     <div class="form-group">
       <label for="task" class="col-sm-3 control-label">Task</label>
       <div class="col-sm-9">
-        <input type="text" id="task" placeholder="Task" class="form-control" autofocus>
+        <input type="text" [(ngModel)]="Task.Task" placeholder="Task" class="form-control" autofocus>
       </div>
     </div>
     <div class="form-group">
       <label for="Priority" class="col-sm-3 control-label">Priority</label>
       <div class="col-sm-9">
-        <input type="range" id="priority" class="form-control" autofocus>
+        <input type="range" [(ngModel)]="Task.Priority" class="form-control" autofocus>
       </div>
     </div>
     <div class="form-group">
       <label for="email" class="col-sm-3 control-label">Parent Task </label>
       <div class="col-sm-9">
-        <select class="form-control">
+        <select [(ngModel)]="Task.ParentTaskId" class="form-control" >
       <option>Select</option>
     </select>
       </div>
@@ -25,13 +25,13 @@
     <div class="form-group">
       <label for="startdate" class="col-sm-3 control-label">Start Date</label>
       <div class="col-sm-9">
-        <input type="date" id="startdate" class="form-control">
+        <input type="date" [(ngModel)]="Task.StartDate" class="form-control">
       </div>
     </div>
     <div class="form-group">
       <label for="enddate" class="col-sm-3 control-label">End Date</label>
       <div class="col-sm-9">
-         <input type="date" id="enddate" class="form-control">
+         <input type="date" [(ngModel)]="Task.StartDate" class="form-control">
       </div>
     </div>
    <!-- /.form-group -->
