--- a/src/app/Task/update-task/update-task.component.html
+++ b/src/app/Task/update-task/update-task.component.html
@@ -1,47 +1,52 @@
 <div class="container">
-  <form class="form-horizontal" role="form">
+  <form #updatetaskForm="ngForm" class="form-horizontal" role="form">
     <h2>Update Task</h2>
     <hr>
     <div class="form-group">
       <label for="task" class="col-sm-3 control-label">Task</label>
       <div class="col-sm-9">
-        <input type="text" id="task" placeholder="Task" class="form-control" autofocus>
+        <input type="text" [(ngModel)]="task.Task1" name="task" class="form-control" autofocus>
       </div>
     </div>
     <div class="form-group">
       <label for="Priority" class="col-sm-3 control-label">Priority</label>
       <div class="col-sm-9">
-        <input type="range" id="priority" class="form-control" autofocus>
+        <input type="range" [(ngModel)]="task.Priority" name="priority" min="1" max="30" step="1" class="form-control" autofocus>
+
       </div>
     </div>
     <div class="form-group">
       <label for="email" class="col-sm-3 control-label">Parent Task </label>
       <div class="col-sm-9">
-        <select class="form-control">
-      <option>Select</option>
-    </select>
+        <select [(ngModel)]="task.Parent_Id" name="parentid" class="form-control">
+          <ng-container *ngFor="let parenttask of parenttasks">
+            <option [value]="parenttask.TaskId">{{parenttask.Task}}</option>
+          </ng-container>
+        </select>
       </div>
     </div>
     <div class="form-group">
       <label for="startdate" class="col-sm-3 control-label">Start Date</label>
       <div class="col-sm-9">
-        <input type="date" id="startdate" class="form-control">
+        <input type="date" [ngModel]="task.Start_Date | date :'yyyy-MM-dd'" (ngModelChange)="task.Start_Date =$event" name="startdate"
+          class="form-control">
       </div>
     </div>
     <div class="form-group">
       <label for="enddate" class="col-sm-3 control-label">End Date</label>
       <div class="col-sm-9">
-         <input type="date" id="enddate" class="form-control">
+        <input type="date" [ngModel]="task.End_Date | date: 'yyyy-MM-dd'" (ngModelChange)="task.Start_Date =$event" name="enddate"
+          class="form-control">
       </div>
     </div>
-   <!-- /.form-group -->
+    <!-- /.form-group -->
     <div class="form-group">
       <div class="col-sm-9 col-sm-offset-3">
-       <button type="submit" class="btn btn-primary">Update Task</button>
-       <button type="reset" id="reset" class="btn btn-primary">Reset</button>
+        <button type="submit" (click)="UpdateTask(updatetaskForm)" class="btn btn-primary">Update Task</button>
+        <button type="reset" id="reset" class="btn btn-primary">Reset</button>
       </div>
     </div>
-    
+
   </form>
   <!-- /form -->
 </div>
