--- a/src/app/Task/view-task/view-task.component.html
+++ b/src/app/Task/view-task/view-task.component.html
@@ -3,29 +3,29 @@
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="task">Task</label>
-                <input type="text" class="form-control" id="task">
+                <input type="text" [(ngModel)]="taskFilter.Task" name="task" class="form-control" id="task">
             </div>
             <div class="form-group col-md-6">
                 <label for="parenttask">Parent Task</label>
-                <input type="text" class="form-control" id="parenttask">
+                <input type="text" [(ngModel)]="taskFilter.ParentTask" name="parenttask" class="form-control" id="parenttask">
             </div>
         </div>
         <div class="form-row">
             <div class="form-group  col-md-3">
                 <label for="priorityfrom">Priority From</label>
-                <input type="number" class="form-control" id="priorityfrom">
+                <input type="number" [(ngModel)]="taskFilter.PriorityFrom" name="PriorityFrom" class="form-control" id="priorityfrom">
             </div>
             <div class="form-group  col-md-3">
                 <label for="priorityto">Priority To</label>
-                <input type="number" class="form-control" id="priorityto">
+                <input type="number" [(ngModel)]="taskFilter.PriorityTo" name="PriorityTo" class="form-control" id="priorityto">
             </div>
             <div class="form-group  col-md-3">
                 <label for="startdate">Start Date</label>
-                <input type="date" class="form-control" id="startdate">
+                <input type="date" [(ngModel)]="taskFilter.StartDate" name="StartDate" class="form-control" id="startdate">
             </div>
             <div class="form-group  col-md-3">
                 <label for="enddate">End Date</label>
-                <input type="date" class="form-control" id="enddate">
+                <input type="date" [(ngModel)]="taskFilter.EndDate" name="EndDate" class="form-control" id="enddate">
             </div>
         </div>
         <hr>
@@ -40,7 +40,7 @@
                     <th scope="col">Action</th>
                 </tr>
             </thead>
-            <tbody  *ngFor="let task of taskDetails">
+            <tbody  *ngFor="let task of taskDetails | viewtaskfilter: {Task:taskFilter.Task,ParentTask:taskFilter.ParentTask,PriorityFrom:taskFilter.PriorityFrom,PriorityTo:taskFilter.PriorityTo,StartDate:taskFilter.StartDate,EndDate:taskFilter.EndDate}">
                 <tr>
                     <td>{{task.Task}}</td>
                     <td>{{task.ParentTask}}</td>
@@ -48,7 +48,7 @@
                     <td>{{task.StartDate | date:'dd/MM/yyyy'}}</td>
                     <td>{{task.EndDate | date:'dd/MM/yyyy'}}</td>
                     <td>
-                        <a routerLink="/updatetask" class="btn btn-primary">Edit Task</a>
+                        <a [routerLink]="['/updatetask',task.TaskId]" class="btn btn-primary">Edit Task</a>
                         <input type="button" class="btn btn-primary end-task"  value="End Task">
                         <router-outlet></router-outlet>
                     </td>
