--- a/src/app/Task/view-task/view-task.component.css
+++ b/src/app/Task/view-task/view-task.component.css
@@ -1,11 +1,7 @@
 *[role="form"] {
-    max-width: 750px;
-    padding: 15px;
-    margin: 0 auto;
-    border-radius: 0.3em;
-    /* background-color: #f2f2f2; */
+     padding: 15px;
 }
 
-.end-task {
+/* .end-task {
     margin-left: 10px;
-}
+} */
