ngx bootstrap date picker changes

--- a/src/app/Task/add-task/add-task.component.html
+++ b/src/app/Task/add-task/add-task.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <form #taskForm="ngForm" class="form-horizontal" role="form">
     <div class="card">
-      <div class="card-header bg-primary text-white">Add Task</div>
+      <div class="card-header bg-success text-white">Add Task</div>
       <div class="card-body">
         <div class="form-group">
           <label for="task" class="col-sm-3 control-label">Task</label>
@@ -43,7 +43,7 @@
         <!-- /.form-group -->
         <div class="form-group">
           <div class="col-sm-9 col-sm-offset-3">
-            <button type="submit" (click)="AddTask(taskForm)" class="btn btn-primary">Add Task</button>
+            <button type="submit" (click)="AddTask(taskForm)" class="btn btn-info">Add Task</button>
           </div>
         </div>
       </div>
