--- a/src/app/Task/update-task/update-task.component.html
+++ b/src/app/Task/update-task/update-task.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <form #updatetaskForm="ngForm" class="form-horizontal" role="form">
     <div class="card">
-      <div class="card-header bg-primary text-white">Update Task</div>
+      <div class="card-header bg-success text-white">Update Task</div>
       <div class="card-body">
         <div class="form-group">
           <label for="task" class="col-sm-3 control-label">Task</label>
@@ -45,8 +45,8 @@
       <div class="card-footer">
         <div class="form-group">
           <div class="col-sm-9 col-sm-offset-3">
-            <button type="submit" (click)="UpdateTask(updatetaskForm)" class="btn btn-primary">Update Task</button>
-            <button type="reset" id="reset" class="btn btn-primary">Reset</button>
+            <button type="submit" (click)="UpdateTask(updatetaskForm)" class="btn btn-info">Update Task</button>
+            <button type="reset" id="reset" class="btn btn-info">Reset</button>
           </div>
         </div>
       </div>
