--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-expand navbar-light bg-light">
-    <a class="navbar-brand" routerLink="viewtask" >Task Manager</a>
-    <ul class="nav nav-bar navbar-nav nav-right">
+<nav class="navbar navbar-expand">
+    <a class="navbar-brand text-dark" routerLink="viewtask" ><b>Task Manager</b></a>
+    <ul class="nav nav-bar navbar-nav ml-auto">
         <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" routerLink="addtask">Add Task</a>
+            <a class="nav-link"  routerLink="addtask"><b>Add Task</b></a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" routerLink="viewtask">View Task</a>
+            <a class="nav-link" routerLink="viewtask"><b>View Task</b></a>
         </li>
     </ul>
 </nav>
