--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-nav {
+/* nav {
 	background: #efefef; 
 	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
 	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
@@ -7,8 +7,8 @@ nav {
 	padding: 0 20px;
 	/* border-radius: 10px;   */
 	
-}
-	nav ul:after {
+/* }  */
+/*	nav ul:after {
 		content: ""; clear: both; display: block;
     }
     
@@ -28,5 +28,5 @@ nav ul li:hover a, nav ul li.active a {
 nav ul li a {
     display: block; 
     /* padding: 25px 40px; */
-    color: #757575; text-decoration: none;
-}
+   /* color: #757575; text-decoration: none;
+} */
