--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,25 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<nav class="navbar navbar-expand">
-    <a class="navbar-brand text-dark" routerLink="viewtask" ><b>Task Manager</b></a>
-    <ul class="nav nav-bar navbar-nav ml-auto">
-        <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link"  routerLink="addtask"><b>Add Task</b></a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" routerLink="viewtask"><b>View Task</b></a>
-        </li>
-    </ul>
+<nav class="navbar navbar-expand navbar-dark bg-secondary">
+    <a class="navbar-brand" routerLink="viewtask">
+        <b>Task Manager</b>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="nav nav-bar navbar-nav ml-auto">
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="addtask">
+                    <b>Add Task</b>
+                </a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="viewtask">
+                    <b>View Task</b>
+                </a>
+            </li>
+        </ul>
+    </div>
 </nav>
 <router-outlet></router-outlet>
