--- a/src/app/Task/update-task/update-task.component.html
+++ b/src/app/Task/update-task/update-task.component.html
@@ -6,7 +6,7 @@
         <div class="form-group">
           <label for="task" class="col-sm-3 control-label">Task</label>
           <div class="col-sm-9">
-            <input type="text" required [(ngModel)]="task.Task1" name="task" #taskcontrol="ngModel" class="form-control" [class.is-invalid]="taskcontrol.invalid && taskcontrol.touched"
+            <input type="text" required [(ngModel)]="task.Name" name="task" #taskcontrol="ngModel" class="form-control" [class.is-invalid]="taskcontrol.invalid && taskcontrol.touched"
               [class.is-valid]="taskcontrol.valid">
             <span class="invalid-tooltip" *ngIf="taskcontrol.invalid && taskcontrol.touched">Task is required</span>
           </div>
