--- a/src/app/Task/add-task/add-task.component.html
+++ b/src/app/Task/add-task/add-task.component.html
@@ -3,6 +3,7 @@
     <div class="card">
       <div class="card-header bg-success text-white">Add Task</div>
       <div class="card-body">
+        <p>{{ task | json }}</p>
         <div class="form-group">
           <label for="task" class="col-sm-3 control-label">Task</label>
           <div class="col-sm-9">
