--- a/src/app/Task/update-task/update-task.component.html
+++ b/src/app/Task/update-task/update-task.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <form #updatetaskForm="ngForm" class="form-horizontal" role="form">
-    <div class="card" *ngIf="(task.EditFlag); else errorcontent">
+    <div class="card" *ngIf="(task.Edit_Flag); else errorcontent">
       <div class="card-header bg-success text-white">Update Task</div>
       <div class="card-body">
         <div class="form-group">
