--- a/src/app/User/add-user/add-user.component.html
+++ b/src/app/User/add-user/add-user.component.html
@@ -1,57 +1,36 @@
 <div class="container">
-    <form #addtaskFrom="ngForm" novalidate class="form-horizontal"  role="form">
+    <form #addUserForm="ngForm" novalidate class="form-horizontal"  role="form">
     <div class="card">
-      <div class="card-header bg-success text-white">Add Task</div>
+      <div class="card-header bg-success text-white">Add User</div>
       <div class="card-body">
         <div class="form-group">
-          <label for="task" class="col-sm-3 control-label">Task</label>
+          <label for="task" class="col-sm-3 control-label">First Name</label>
           <div class="col-sm-9">
-            <input type="text" required [(ngModel)]="task.Name" name="task" #taskcontrol="ngModel" class="form-control"
-            [class.is-invalid]="taskcontrol.invalid && taskcontrol.touched" [class.is-valid]="taskcontrol.valid" >
-            <span class="invalid-tooltip" *ngIf="taskcontrol.invalid && taskcontrol.touched">Task is required</span>
+            <input type="text" required [(ngModel)]="user.First_Name" name="FirstName" #firstnamecontrol="ngModel" class="form-control"
+            [class.is-invalid]="firstnamecontrol.invalid && firstnamecontrol.touched" [class.is-valid]="firstnamecontrol.valid" >
+            <span class="invalid-tooltip" *ngIf="firstnamecontrol.invalid && firstnamecontrol.touched">First Name is required</span>
           </div>
         </div>
         <div class="form-group">
-          <label for="Priority" class="col-sm-3 control-label">Priority</label>
-          <div class="col-sm-9">
-            <input type="range" required [(ngModel)]="task.Priority" name="priority" #prioritycontrol="ngModel" min="1" max="30" step="1" class="custom-range"
-            [class.is-invalid]="prioritycontrol.invalid && prioritycontrol.touched" [class.is-valid]="prioritycontrol.valid">
-            <span class="invalid-feedback" *ngIf="prioritycontrol.invalid && prioritycontrol.touched">Priority is required</span>
+            <label for="task" class="col-sm-3 control-label">Last Name</label>
+            <div class="col-sm-9">
+              <input type="text" required [(ngModel)]="user.Last_Name" name="LastName" #lastnamecontrol="ngModel" class="form-control"
+              [class.is-invalid]="lastnamecontrol.invalid && lastnamecontrol.touched" [class.is-valid]="lastnamecontrol.valid" >
+              <span class="invalid-tooltip" *ngIf="lastnamecontrol.invalid && lastnamecontrol.touched">Last Name is required</span>
+            </div>
           </div>
-        </div>
-        <div class="form-group">
-          <label  class="col-sm-3 control-label">Parent Task </label>
-          <div class="col-sm-9">
-            <select [(ngModel)]="task.Parent_Id" name="parentid" class="form-control">
-              <ng-container *ngFor="let parenttask of parenttasks">
-                <option [value]="parenttask.TaskId">{{parenttask.Task}}</option>
-              </ng-container>
-            </select>
-
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="startdate" class="col-sm-3 control-label">Start Date</label>
-          <div class="col-sm-9">
-            <input type="text" required readonly [(ngModel)]="task.Start_Date" #startdatecontrol="ngModel" name="startdate"  bsDatepicker [bsConfig]="{dateInputFormat:'DD/MM/YYYY'}"
-            [class.is-invalid]="startdatecontrol.invalid && startdatecontrol.touched" [class.is-valid]="startdatecontrol.valid"  placement="right" class="form-control">
-            <span class="invalid-tooltip" *ngIf="startdatecontrol.invalid && startdatecontrol.touched">Start Date is required</span>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="enddate" class="col-sm-3 control-label">End Date</label>
-          <div class="col-sm-9">
-            <input type="text" required readonly [(ngModel)]="task.End_Date" #enddatecontrol="ngModel" name="enddate"  bsDatepicker [bsConfig]="{dateInputFormat:'DD/MM/YYYY'}"
-            [class.is-invalid]="enddatecontrol.invalid && enddatecontrol.touched" [class.is-valid]="enddatecontrol.valid"  placement="right" class="form-control">
-            <span class="invalid-tooltip" *ngIf="enddatecontrol.invalid && enddatecontrol.touched">End Date is required</span>
-          </div>
-        </div>
+          <div class="form-check">
+              <div class="col-sm-9">
+                <input type="checkbox" [(ngModel)]="user.Manager_Flag" name="ManagerFlag" class="form-check-input" >
+                <label class="form-check-label">Manager</label>
+              </div>
+            </div>
       </div>
       <div class="card-footer">
         <!-- /.form-group -->
         <div class="form-group">
           <div class="col-sm-9 col-sm-offset-3">
-            <button type="submit" (click)="AddTask(addtaskFrom)" [disabled]="addtaskFrom.invalid" class="btn btn-info">Add Task</button>
+            <button type="submit" (click)="AddUser(addUserForm)" [disabled]="addUserForm.invalid" class="btn btn-info">Add User</button>
             <button type="reset" id="reset" class="btn btn-info ml-1">Reset</button>
           </div>
         </div>
