--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="nav nav-bar navbar-nav ml-auto">
             <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="adduser">
+                    <b>Add User</b>
+                </a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="addproject">
+                    <b>Add Project</b>
+                </a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="addtask">
                     <b>Add Task</b>
                 </a>
