--- a/src/app/User/add-user/add-user.component.html
+++ b/src/app/User/add-user/add-user.component.html
@@ -1,41 +1,78 @@
 <div class="container">
-    <form #addUserForm="ngForm" novalidate class="form-horizontal"  role="form">
-    <div class="card">
-      <div class="card-header bg-success text-white">Add User</div>
-      <div class="card-body">
-        <div class="form-group">
-          <label for="task" class="col-sm-3 control-label">First Name</label>
-          <div class="col-sm-9">
-            <input type="text" required [(ngModel)]="user.First_Name" name="FirstName" #firstnamecontrol="ngModel" class="form-control"
-            [class.is-invalid]="firstnamecontrol.invalid && firstnamecontrol.touched" [class.is-valid]="firstnamecontrol.valid" >
-            <span class="invalid-tooltip" *ngIf="firstnamecontrol.invalid && firstnamecontrol.touched">First Name is required</span>
-          </div>
-        </div>
-        <div class="form-group">
-            <label for="task" class="col-sm-3 control-label">Last Name</label>
-            <div class="col-sm-9">
-              <input type="text" required [(ngModel)]="user.Last_Name" name="LastName" #lastnamecontrol="ngModel" class="form-control"
-              [class.is-invalid]="lastnamecontrol.invalid && lastnamecontrol.touched" [class.is-valid]="lastnamecontrol.valid" >
-              <span class="invalid-tooltip" *ngIf="lastnamecontrol.invalid && lastnamecontrol.touched">Last Name is required</span>
-            </div>
-          </div>
-          <div class="form-check">
+  <div class="form-row">
+    <div class="col-lg-4 col-md-4 col-sm-12">
+      <form #addUserForm="ngForm" novalidate class="form-horizontal" role="form">
+        <div class="card">
+          <div class="card-header bg-success text-white">Add User</div>
+          <div class="card-body">
+            <div class="form-group">
+              <label for="task" class="col-sm-5 control-label">First Name</label>
               <div class="col-sm-9">
-                <input type="checkbox" [(ngModel)]="user.Manager_Flag" name="ManagerFlag" class="form-check-input" >
+                <input type="text" required [(ngModel)]="user.First_Name" name="FirstName" #firstnamecontrol="ngModel" class="form-control"
+                  [class.is-invalid]="firstnamecontrol.invalid && firstnamecontrol.touched" [class.is-valid]="firstnamecontrol.valid">
+                <span class="invalid-tooltip" *ngIf="firstnamecontrol.invalid && firstnamecontrol.touched">First Name is required</span>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="task" class="col-sm-5 control-label">Last Name</label>
+              <div class="col-sm-9">
+                <input type="text" required [(ngModel)]="user.Last_Name" name="LastName" #lastnamecontrol="ngModel" class="form-control"
+                  [class.is-invalid]="lastnamecontrol.invalid && lastnamecontrol.touched" [class.is-valid]="lastnamecontrol.valid">
+                <span class="invalid-tooltip" *ngIf="lastnamecontrol.invalid && lastnamecontrol.touched">Last Name is required</span>
+              </div>
+            </div>
+            <div class="form-check">
+              <div class="col-sm-9">
+                <input type="checkbox" [(ngModel)]="user.Manager_Flag" name="ManagerFlag" class="form-check-input">
                 <label class="form-check-label">Manager</label>
               </div>
             </div>
-      </div>
-      <div class="card-footer">
-        <!-- /.form-group -->
-        <div class="form-group">
-          <div class="col-sm-9 col-sm-offset-3">
-            <button type="submit" (click)="AddUser(addUserForm)" [disabled]="addUserForm.invalid" class="btn btn-info">Add User</button>
-            <button type="reset" id="reset" class="btn btn-info ml-1">Reset</button>
+          </div>
+          <div class="card-footer">
+            <!-- /.form-group -->
+            <div class="form-group">
+              <div class="col-sm-9 col-sm-offset-3">
+                <button type="submit" (click)="Add(addUserForm)" [disabled]="addUserForm.invalid" class="btn btn-info">Add User</button>
+                <button type="reset" id="reset" class="btn btn-info ml-1">Reset</button>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+      </form>
     </div>
-  </form>
+    <div class="col-lg-7 col-md-7 col-sm-12">
+      <table class="table table-bordered table-stripped">
+        <thead class="bg-success text-white">
+          <tr>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Manager</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody *ngFor="let user of userDetails" >
+                        <tr>
+                            <td>{{user.FirstName}}</td>
+                            <td>{{user.LastName}}</td>
+                            <td>{{user.Manager}}</td>
+                            <td>
+                                <div class=" btn-toolbar " role="toolbar ">
+                                    <div class="btn-group mr-2 " role="group ">
+                                       <input type="button " (click)="Edit(user.UserId)
+          " class="btn btn-info " value="Edit">
+                                    </div>
+                                    <div class="btn-group " role="group ">
+                                        <input type="button " *ngIf="task.EditFlag " (click)="Delete(user.UserId)
+          " class="btn btn-info " value="Delete ">
+                                        <router-outlet></router-outlet>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+
+                    </tbody>
+</table>
+  </div>
+  </div>
   <!-- /form -->
 </div>
